src/objects/My_Task__c.object
<CustomObject>
    <description>Manage your Tasks</description>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CFO Lens</fullName>
                </value>
                <value>
                    <fullName>GCJ</fullName>
                </value>
                <value>
                    <fullName>Global Pipeline</fullName>
                </value>
                <value>
                    <fullName>Nerve Center</fullName>
                </value>
                <value>
                    <fullName>SmartNet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Task_Name__c</fullName>
        <description>Name of the task</description>
        <label>Task Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Type__c</fullName>
        <label>Task Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Official</fullName>
                </value>
                <value>
                    <fullName>Personal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>My Task</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>T-{0}</displayFormat>
        <label>My Task Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>My Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>